2005-03-05 16:01  antirez

	* ChangeLog, Makefile, jim-aio.c, jim.c, jim.h: Initial version of
	  AIO (ANSI C I/O) extension added.  Some bit of const safeness. A
	  new API function to get the object length, Jim_Length().

2005-03-05 13:22  antirez

	* ChangeLog, jim-posix.c, jim-win32.c, jim-win32com.c, jim.c,
	  jim.h: delProc callback added to Jim_CreateCommand().  Core
	  commands handling updated to respect the new sematic.

2005-03-05 13:13  antirez

	* ChangeLog, jim-posix.c: extern int errno declaration removed from
	  the posix extension.

2005-03-05 11:45  patthoyts

	* jim.c, jim.h: Added Jim_GetAssocData api. This for permitting
	  packages to register a data structure with a Jim interpreter.

2005-03-05 10:46  antirez

	* ChangeLog, jim.c, jim.h: removed strcasecmp() and isascii(). Now
	  the Jim core is fully ANSI-C excluding the [load] command. I plan
	  to add a JIM_FORCE_ANSIC ifdef to exclude the load command for
	  compilation.

2005-03-05 10:34  antirez

	* AUTHORS, ChangeLog, README, jim.c, jim.h, test.tcl: [switch]
	  command contributed by Clemens Hintze, modified to avoid problems
	  with -command and shimmering of the objects passed as [switch]
	  arguments.

2005-03-05 00:59  patthoyts

	* Makefile.vc, jim-win32com.c, jim.c: Added ole32.foreach command,
	  changed creation to ole32.create.  Added support for dealing with
	  returned ole32 obejcts.  Couple of const fixes in jim core.

2005-03-04 23:44  antirez

	* jim.c: Removed two unused parts of code resulting in warnings
	  compiling under 64bit systems.

2005-03-04 23:04  antirez

	* ChangeLog, jim.c: Fix for [info local], at top level an empty
	  list is now returned.

2005-03-04 22:59  antirez

	* jim.c: binary safe parsers for scripts,lists,expr,subst.

2005-03-04 21:12  antirez

	* jim.c: Fixed a bug in Jim_Collect() thanks to Colin McPhail that
	  reported it.

2005-03-04 16:37  antirez

	* jim-posix.c, jim-win32.c, jim-win32com.c, jim.c: JIM_NOTUSED